--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "PresuRE v2.0",
-  "short_name": "PresuRE",
+  "short_name": "PresuRE v2.0",
   "lang": "es",
   "start_url": "./index.html",
   "scope": "./",
